// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Url renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      disabled={true}
      placeholder=" "
      type="url"
      value="https://sportsbet.io"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      disabled={true}
      placeholder=" "
      type="url"
      value="https://sportsbet.io"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        disabled={true}
        placeholder=" "
        type="url"
        value="https://sportsbet.io"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Url renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY eNHHez"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY kTwDzI"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY jTdfvW"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Url renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      placeholder=" "
      readOnly={true}
      type="url"
      value="https://sportsbet.io"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      placeholder=" "
      readOnly={true}
      type="url"
      value="https://sportsbet.io"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        placeholder=" "
        readOnly={true}
        type="url"
        value="https://sportsbet.io"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Url renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      dir="rtl"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      dir="rtl"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        dir="rtl"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-erijoS kPCrAG"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <input
      className="sc-eZceyY doHeXV"
      placeholder="medium"
      type="url"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <input
      className="sc-eZceyY dNMcoK"
      placeholder="large"
      type="url"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY qyezZ"
        placeholder="xlarge"
        type="url"
      />
      <label
        className="sc-erijoS htSbIl"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY jPBdqa"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY kkoGQh"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP kJWjmt"
    >
      <input
        className="sc-eZceyY cexKEg"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
